plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.11'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.sonarqube" version "4.4.1.3373"
	id 'jacoco'
}

group = 'com.almaeng'
version = '0.0.1-SNAPSHOT'
description = 'backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation "org.testcontainers:testcontainers:1.19.0"
	testImplementation "org.testcontainers:junit-jupiter:1.19.0"
	testImplementation "org.testcontainers:postgresql:1.19.0"
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()

	def testcontainersHost = System.getenv('TESTCONTAINERS_HOST_OVERRIDE')
	if (testcontainersHost != null) {
		environment 'TESTCONTAINERS_HOST_OVERRIDE', testcontainersHost
	}

	def dockerHost = System.getenv('DOCKER_HOST')
	if (dockerHost != null) {
		environment 'DOCKER_HOST', dockerHost
	}
}

jar {
	enabled = false
}

sonar {
    properties {
        property "sonar.projectKey", "al-maeng-backend" 
        property "sonar.projectName", "al-maeng-backend" 
        property "sonar.sourceEncoding", "UTF-8"
        
        property "sonar.java.binaries", "${buildDir}/classes"
        property "sonar.exclusions", "**/test/**, **/resources/**, **/*Application.java" 
    }
}